--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -6,7 +6,7 @@ author_profile: true
 ---
 
 {% if site.author.googlescholar %}
-  <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">Google Scholar</a>. (* indicate the corresponding author)</div>
+  <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">Google Scholar</a>. (# indicate the first author, * indicate the corresponding author)</div>
 {% endif %}
 
 {% include base_path %}
